# MDGitView

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
docs/: README.md  ai-implementation-spec.md  ai-replication-playbook.md  app-store-notes.md  implementation-status.md  security-model.md
md-engine/: Cargo.toml
md-engine/src/: lib.rs
md-ffi/: Cargo.toml
md-ffi/include/: md_ffi.h
md-ffi/src/: lib.rs
md-viewer-macos/: README.md  project.yml
md-viewer-macos/App/: AboutView.swift  ContentView.swift  MDGitViewApp.swift  MDViewerApp.swift  ViewerViewModel.swift
md-viewer-macos/Config/: MDViewer-Info.plist  MarkdownPreviewExtension-Info.plist  MarkdownPreviewExtension.entitlements  MarkdownThumbnailExtension-Info.plist
md-viewer-macos/PreviewExtension/: MarkdownPreviewViewController.swift
md-viewer-macos/Resources/Assets/: github-markdown.css  mathjax.js  mermaid.min.js  viewer-shell.js
md-viewer-macos/Shared/: MarkdownLinkPolicy.swift  MarkdownRenderService.swift  MarkdownWebView.swift  RenderModels.swift  RustMarkdownFFI.swift
md-viewer-macos/ThumbnailExtension/: MarkdownThumbnailProvider.swift
scripts/: build_rust.sh  generate_app_icon.sh  install.sh  notarize.sh  release.sh
tests/: integration_quicklook.sh
tests/fixtures/: large.md  sample.md
