[workspace]
members = [
  "md-engine",
  "md-ffi"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Toni Hintikka"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
pulldown-cmark = "0.10"
ammonia = "4.0"
once_cell = "1.19"
